2017-08-17  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): Version: 0.2-6

	* R/functions.R (end_of_year): fix shift
	parameter (which had been applied to months
	instead of years)
	(end_of_previous_year): add function

	* inst/unitTests/ut_datetime.R
	(test.end_of_year, test.end_of_month): add test
	cases

2017-08-07  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): 0.2-5

	* vignettes/datetimeutils_examples.Rnw: add
	vignette

2017-07-09  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.2-4

	* man/guess_datetime.Rd: update docs

	* DESCRIPTION (Version): 0.2-3

	* R/functions.R (guess_datetime): rename
	function and export it

2017-07-07  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (guess_time): add function (not
	exported yet)

2017-07-06  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): 0.2-2

	* R/functions.R (timegrid): fix timezone
	handling

2017-06-26  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): 0.2-1

	* R/functions.R (timegrid): fix handling of
	'excludeWeekends' (which had been ignored) and
	handling of timezone

	* inst/unitTests/ut_datetime.R (test.timegrid):
	add tests

	* man/*: several minor updates

2017-06-22  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (rfc822t): use 'month.abb'

2017-06-19  Enrico Schumann  <es@enricoschumann.net>

	* README.md: add file

	* man/*: update docs

2017-06-14  Enrico Schumann  <es@enricoschumann.net>

	* inst/unitTests/ut_datetime.R: fix unit tests,
	as many were broken because of the renaming of
	functions for version 0.2-0

2017-05-08  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): Version: 0.2-0

	* R/functions.R: *BACKWARD* *INCOMPATIBLE* *CHANGES*:
	rename functions:

	convertDate   => convert_date
        convertTZ     => convert_tz
        dayOfMonth<-  => day_of_month<-
        dayOfMonth    => day_of_month
        endOfMonth    => end_of_month